fix language switcher text align to center

--- a/src/view/home/_components/language-swicher/language-swicher.pcss
+++ b/src/view/home/_components/language-swicher/language-swicher.pcss
@@ -1,6 +1,7 @@
 #language-switcher {
   & .language-list {
     display: flex;
+    align-items: flex-end;
   }
 }
 
@@ -17,6 +18,7 @@
       color: #6060608e;
       font-size: 1.25rem;
       transition: 0.4s;
+      line-height: 1;
 
       &:hover {
         color: #000000;
